@@ -264,7 +264,8 @@ Note that, each object should have unique <ObjectName>.
      * AsimovReplacementFor: only for GHOST samples; if set, the creation of cutsom Asimov data-set(s) is triggered; use as 'AsimovReplacementFor: "dataset","sample"', where "dataset" is the name of a custom Asimov dataset one wants to create (the same name will have to be set under Job->CustomAsimov in order to use it) and "sample" is the sample this GHOST sample will superseed
      * SeparateGammas   : if set to TRUE, the sample will not contribute to the overall gamma factors for MC stat, but a separate set of them will be added for this sample (through the SHAPE systematic technology); NB: you need to re-run at least the "b" step if you want to decorrelate the gammas on existing inputs (wf is not enough)
      * CorrelateGammasInRegions: to be used only together with SeparateGammas; can be used to correlate MC stat across regions; example: "SR1:SR2,CR1:CR2:CR3" will use the same NP for the MC stat in each bin of SR1 and SR2 and in each bin of CR1, CR2 and CR3
-
+     * Morphing         : add this to each template you have, to do a template fit / morphing; syntax is <name-of-parameter>,<value-corresponding-to-this-template>; the POI should be set to <name-of-parameter>
+     
   * NormFactor:
      * Samples          : comma-separated list of samples on which to apply the norm factor
      * Regions          : comma-separated list of regions where to apply the norm factor
