@@ -1,3 +1,8 @@
+2018-01-25 Michele Pinamonti <michele.pinamonti@gmail.com>
+    * Added first version of template fitting (1D signal morphing) THANKS TOMAS DADO!!
+    * Working on TTHFITTER-139
+    * Fixed small issue with prefit tables causing crash sometimes
+    
 2018-01-24 Michele Pinamonti <michele.pinamonti@gmail.com>
     * Fixed runAsymptoticCLs_inject
     * Fixed crashes related to post-fit and gamma uncertainty propagation
